--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
           <div class="hero-banner">
 
-            <img src="./assets/images/hero-banner.jpg" width="800" height="864" loading="lazy" alt="Zidan's Photo"
+            <img src="hero-banner.jpg" width="800" height="864" loading="lazy" alt="Zidan's Photo"
               class="img-cover">
 
           </div>
@@ -102,7 +102,7 @@
 
           <figure class="about-banner">
 
-            <img src="./assets/images/about-banner.jpg" width="800" height="652" loading="lazy" alt="Zidan's Photo"
+            <img src="about-banner.jpg" width="800" height="652" loading="lazy" alt="Zidan's Photo"
               class="img-cover">
 
             <div class="abs-icon abs-icon-1">
@@ -241,7 +241,7 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="./assets/images/blog-1.jpg" width="1181" height="843" loading="lazy"
+                    <img src="blog-1.jpg" width="1181" height="843" loading="lazy"
                       class="img-cover">
                   </a>
                 </figure>
@@ -260,7 +260,7 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="./assets/images/blog-2.jpg" width="1181" height="843" loading="lazy"
+                    <img src="blog-2.jpg" width="1181" height="843" loading="lazy"
                     class="img-cover">
                   </a>
                 </figure>
@@ -279,7 +279,7 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="./assets/images/blog-3.jpg" width="1181" height="843" loading="lazy"
+                    <img src="blog-3.jpg" width="1181" height="843" loading="lazy"
                      class="img-cover">
                   </a>
                 </figure>
