--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </li>
 
           <li>
-            <a href="#blog" class="navbar-link" data-nav-link>Blog</a>
+            <a href="#blog" class="navbar-link" data-nav-link>Project</a>
           </li>
 
         </ul>
