--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
            
 
             <div class="btn-group">
-              <a href="#contact" class="btn btn-primary blue"><b>Let's Talk</b></a>
+              <a href="zidan.arrofi64@gmail.com" class="btn btn-primary blue"><b>Let's Talk</b></a>
             </div>
 
           </div>
