--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
             </li>
 
             <li class="skills-item">
-              <div class="wrapper" style="width: 75%">
+              <div class="wrapper" style="width: 65%">
                 <h3 class="skills-title">JavaScript</h3>
 
-                <data class="skills-data" value="75">75%</data>
+                <data class="skills-data" value="65">65%</data>
               </div>
 
               <div class="skills-progress-box">
-                <div class="skills-progress" style="width: 75%"></div>
+                <div class="skills-progress" style="width: 65%"></div>
               </div>
             </li>
 
@@ -260,15 +260,14 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="blog-2.jpg" width="1181" height="843" loading="lazy"
+                    <img src="blog-4.jpg" width="1181" height="843" loading="lazy"
                     class="img-cover">
                   </a>
                 </figure>
 
-                <a href="#" class="card-tag">Pokedex</a>
-
+                <a href="#" class="card-tag">Hotelin</a>
                 <h3 class="card-title">
-                  <a href="#">I created a web about Pokemon and information about these pokemon using ReactJS</a>
+                  <a href="#">I created a landing page web and information about that using ReactJS</a>
                 </h3>
 
               </div>
